0.15 
	- added server_info method for PBC
	- added list bucket support for both protocols (0.14+ for REST)
    - added PBC support
	- added Test::Riak for running tests on both protocols
    - added disable_return_body flag, in REST mode prevents body being returned on store

    DEPRECATIONS
    - $object->status please call $object->client->status (for REST only)
    - $object->count_links, added ->has_links and ->all_links
    - disable_return_body will become the default in 0.17
    - support for providing multiple hosts when connecting (only supported by REST)
      all load balancing code to be moved out of Net::Riak by 0.17.

0.13
	- Enviroment variable for riak when running tests (Robin Edwards)
	- Connection caching (Andrew Sayers)
	- Automatic key generation support (Simon Wistow)

0.12
    - fix _build_link method (reported by gphat)
    - added useragent timeout parameter (Robin Edwards)
    - added expected status message (Robin Edwards)
    - added delete_object method to Net::Riak::Bucket (Robin Edwards)
    - support for adding bucket as objects in add method (Robin Edwards)

0.11 Wed 03 Nov 2010 03:01:10 PM CET  
    - update POD (franck cuny)
    - fix wrong clearer name (_clear_siblings instead of _clear_links)

0.10 Tue 02 Nov 2010 03:34:16 PM CET  
    - add support of array arguments in Net::Riak::MapReduce->add() (Germain Maurice)
    - add 204 to Object::store expected status codes (Gavin Carr)
    - refactor build link logic (Ben Hengst)
    - requests and responses now stored for debugging (Robin Edwards)
    - documentation updated (Robin Edwards)

0.09 Tue 05 Oct 2010 12:03:59 PM CEST  
    - typo
    - when executing a map/reduce, if the timeout of the map/reduce is higher
      than the value for the useragent's timeout, change for this query the
      value of the useragent timeout to be the same as the one for the job.
    - add key callbacks to Bucket get_properties/get_keys stream mode 
      (Gavin Carr)
